--- a/navbar.html
+++ b/navbar.html
@@ -5,5 +5,5 @@
   <a href="forelesningsplan.html">Forelesningsplan</a>
   <a href="innleveringer.html">Innleveringer</a>
   <a href="seminarplan.html">Seminarer</a>
-  <a href="readmepage.html">How to set up the <br>course page</a>
+  <a href="readmepage.html">How to set up a <br>course page</a>
 </div>
